# runtime_stm32f2

./: CMakeLists.txt  CMakePresets.json  README.md
app/: hello.c
cmake/: install-rules.cmake
src/: handlers.c  init.c  stm32f207zg.ld
toolchains/: gcc-armv7_m-unknown-none-eabi.toolchain
